--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,10 +1,194 @@
-*{
-    background-color: rgb(220, 161, 161);
+.footer {
+    position: relative;
+    padding-top: 11.25rem; 
+    padding-bottom: clamp(1.875rem ,10vw ,  3.125rem);
+    display: grid;
+    grid-template-columns: 1fr 1fr auto 1fr auto;
+    align-items: stretch;
+    justify-items: center;
+    gap: clamp(.625rem , 10vw, 1.5rem);
+    &::after{
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%; 
+        height: 100%;
+        background: url("/src/assets/img/footer/footer-blueLine.png") no-repeat;
+        background-size: cover; 
+        z-index: -1;
+        @media (max-width: 46.875em) {
+            display: none;
+        }
+    }
+    &::before{
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%; 
+        height: 100%;
+        background: url("/src/assets/img/footer/footer-whiteLine.png") no-repeat;
+        background-size: cover; 
+        z-index: -2;
+        @media (max-width: 46.875em) {
+            display: none;
+        }
+    }
+    @media (max-width: 68.75em) {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto auto;
+        gap: clamp(.625rem ,10vw , 2.1875rem);
+        align-items: center;
+    }
+    @media (max-width: 46.875em) {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        gap: clamp(.625rem ,10vw , 2.1875rem);
+        align-items: center;
+        background-color: #194484;
+        padding-top: clamp(1.25rem ,10vw , 11.25rem); 
+        z-index: -2;
+    }
 }
-head{
-    width: 400px;
-    height: 400px;
-    color: rgb(0, 0, 0);
-    border-bottom: 2px solid black;
-    margin-bottom: 25px;
+.footer-socials {
+    display: flex;
+    flex-direction: column;
+    gap: clamp(.625rem, 10vw, 3.3125rem);
+    &__logo {}
+    &__items {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 2.8125rem;
+        max-width: 13.3125rem;
+    }
+    &__item {
+        font-weight: 400;
+    }
+    &__item:hover {
+        color: #66D6A0;
+    }
+}
+.footer-services {
+    display: grid;
+    gap: clamp(.625rem , 10vw, 1.875rem);
+    &__text {
+        font-family: 'Harabara';
+        font-size: 1.25rem;
+        font-weight: 700;
+        line-height: 1.3125rem;
+        text-transform: uppercase;
+        max-height: 1.25rem;
+    }
+    &__text:hover {
+        color: #d8d8d8;
+    }
+    &__items {
+        display: grid;
+        gap: clamp(.625rem , 10vw, 1.1875rem);
+    }
+    &__item {
+        font-weight: 400;
+    }
+    &__item:hover {
+        color: #d8d8d8;
+    }
+}
+.footer-technologies {
+    display: flex;
+    flex-direction: column;
+    gap: clamp(.625rem , 10vw, 1.1875rem);
+    &__text {
+        font-family: 'Harabara';
+        font-size: 1.25rem;
+        font-weight: 700;
+        line-height: 1.3125rem;
+        text-transform: uppercase;
+        max-height: 1.25rem;
+    }
+    &__text:hover {
+        color: #d8d8d8;
+    }
+    &__items {
+        display: grid;
+        gap: clamp(.625rem , 10vw, 1.1875rem);
+    }
+    &__item {
+        font-weight: 400;
+    }
+    &__item:hover {
+        color: #d8d8d8;
+    }
+}
+.footer-products {
+    display: flex;
+    flex-direction: column;
+    gap: clamp(.625rem , 10vw, 1.1875rem);
+    &__text {
+        font-family: 'Harabara';
+        font-size: 1.25rem;
+        font-weight: 700;
+        line-height: 1.3125rem;
+        text-transform: uppercase;
+    }
+    &__text:hover {
+        color: #d8d8d8;
+    }
+}
+.footer-about {
+    display: flex;
+    flex-direction: column;
+    gap: clamp(.625rem , 10vw, 1.1875rem);
+    &__text {
+        font-family: 'Harabara';
+        font-size: 1.25rem;
+        font-weight: 700;
+        line-height: 1.3125rem;
+        text-transform: uppercase;
+        max-height: 1.25rem;
+    }
+    &__text:hover {
+        color: #d8d8d8;
+    }
+    &__items {
+        display: grid;
+        gap: clamp(.625rem , 10vw, 1.1875rem);
+    }
+    &__item {
+        font-weight: 400;
+    }
+    &__item:hover {
+        color: #d8d8d8;
+    }
+}
+
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    padding: 1.25rem 1rem;
+    flex-wrap: wrap;
+    @media (max-width: 41.875em) {
+        justify-content: center;
+        align-items: center;
+        gap: 1.5625rem;
+    }
+    &__right {
+        font-family: 'Open+Sans';
+        font-weight: 400;
+        font-size: .875rem;
+        color: $mainColor;
+    }
+    &__items {
+        display: flex;
+        gap: clamp(1.875rem , 10vw, 9.0625rem);
+    }
+    &__item {
+        font-family: 'Open+Sans';
+        font-weight: 400;
+        font-size: .875rem;
+        color: $mainColor;
+    }
+    &__item:hover {
+        color: #a4a3a3;
+    }
 }
