--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,15 +1,63 @@
 .home {
-    position: relative;
-    overflow: hidden;
-
-    &__container {
-
-    }
-    &::before {
-        content: '';
+    padding-top: 9.375rem;
+    display: flex;
+    padding-left: 25px;
+    padding-right: 25px;
+    &::after{
         position: absolute;
-        width: 100%;
-        height: 100%;top: 0;
+        content: '';
+        top: 0;
         left: 0;
+        width: 100%;
+        height: 100%;
+        background: url("/src/assets/img/home/focus/homeBG.png") no-repeat;
+        background-size: cover; 
+        z-index: -2;
     }
+    &__content {
+        max-width: 34.375rem;
+        display: grid;
+        gap: .9375rem;
+    }
+    @media (max-width: 68.75rem) {
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+}
+.home-content {
+    &__title {
+        font-family: 'Harabara';
+        font-weight: 700;
+        font-size: clamp(1.5rem , 10vw, 2.75rem);
+        line-height: 136%;
+    }
+    &__reverse {
+        display: flex;
+        flex-direction: column;
+        gap: .9375rem;
+        @media (max-width: 67.3125rem) {
+            flex-direction: column-reverse;
+            padding-top: 3.75rem;
+        }
+    }
+    &__text {
+        font-weight: 400;
+        line-height: 162%;
+        @media (max-width: 67.3125rem) {
+            color: $mainColor;
+            padding-top: clamp(150px , 5vw, 250px);
+        }
+    }
+    &__navigation {
+        display: flex;
+        gap: 1.5625rem;
+        @media (max-width: 68.75rem) {
+            justify-content: center;
+        }
+        @media (max-width: 31.25rem) {
+            flex-direction: column;
+        }
+    }
+    &__swiper {}
 }
