--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,12 +1,16 @@
 .header {
+    position: relative;
     display: flex;
     min-height: 5rem;
     padding: .3125rem;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     box-shadow: 0px 4px 12px 0px rgba(24, 9, 96, 0.1);
+    z-index: 50;
+    gap: 1.875rem;
     @media (max-width: 79em){
         gap: .625rem;
+        justify-content: space-between;
     }
     &__logo {
     }
@@ -36,7 +40,7 @@
         font-weight: 700;
     }
     &__link:hover {
-        color: #d8d8d8;
+        border-bottom: 2px solid #ffffff;
     }
 }
 .icon-menu {
