--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,18 +1,24 @@
-.home {
-    padding-top: 9.375rem;
+//----------------------------------------------focus-----------------------------------------------------------
+
+.focus{
+    padding-top: clamp(3.125rem, 10vh, 9.375rem);
     display: flex;
     padding-left: 25px;
     padding-right: 25px;
-    @media (max-width: 1075px) {
+    @media (max-width: 68.75em) {
+        justify-content: center;
+        align-items: center;
+        text-align: center;
         &::after{
             position: absolute;
             content: '';
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
+            height: 70%;
             background: url("/src/assets/img/home/focus/homeBG.png") no-repeat;
             background-size: cover; 
+
         }
     }
     
@@ -22,56 +28,51 @@
         gap: .9375rem;
         z-index: 10;
     }
-    @media (max-width: 68.75rem) {
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-    }
 }
-.home-content {
+.focus-content {
     &__title {
         font-family: 'Harabara';
         font-weight: 700;
-        font-size: clamp(1.5rem , 10vw, 2.75rem);
+        font-size: clamp(1.5rem , 5vw, 2.75rem);
         line-height: 136%;
     }
     &__reverse {
         display: flex;
         flex-direction: column;
         gap: .9375rem;
-        @media (max-width: 67.1875em) {
+        @media (max-width: 68.75em) {
             flex-direction: column-reverse;
-            padding-top: 3.75rem;
+            padding-top: 100px;
         }
     }
     &__text {
         font-weight: 400;
         line-height: 162%;
-        @media (max-width: 67.1875em) {
+        @media (max-width: 68.75em) {
             color: $mainColor;
-            padding-top: clamp(125px , 10vw, 250px);
+            padding-top: clamp(7.8125rem , 12vw, 28.125rem);
         }
     }
     &__navigation {
         display: flex;
         gap: 1.5625rem;
-        @media (max-width: 68.75rem) {
+        @media (max-width: 68.75em) {
             justify-content: center;
         }
         @media (max-width: 21.875em) {
             flex-direction: column;
         }
     }
-    &__swiper {}
 }
 
+//----------------------------------------------swiper-----------------------------------------------------------
 
 .swiper {
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: 1;
-    @media (max-width: 1075px) {
+    @media (max-width: 68.75em) {
         display: none;
     }
 }
@@ -88,9 +89,14 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
         background: url("/src/assets/img/home/focus/homeBG.png") no-repeat;
-        background-size: cover; 
+        background-size: cover;
+        @media (min-width: 68.75em) {
+            height: 100%;
+        } 
+        @media (max-width: 68.75em) {
+            height: 55%;
+        } 
     }
 }
 .swiper-slide-2 {
@@ -103,6 +109,12 @@
         height: 100%;
         background: url("/src/assets/img/home/focus/homeBG2.png") no-repeat;
         background-size: cover; 
+        @media (min-width: 68.75em) {
+            height: 100%;
+        } 
+        @media (max-width: 68.75em) {
+            height: 55%;
+        } 
     }
 }
 .swiper-pagination {
@@ -111,3 +123,232 @@
 }
 .swiper-button-next {
 }
+
+//----------------------------------------------technologies-----------------------------------------------------------
+.technologies {
+    margin-top: 34.375rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: clamp(3.125rem , 10vw, 7.5rem );
+    @media (max-width: 100rem) {
+        margin-top: 15.625rem;
+    } 
+    @media (max-width: 68.75em) {
+        margin-top: 7.8125rem;
+    } 
+ 
+}
+.technologies-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: $mainColor;
+    gap: 1.875rem;
+    text-align: center;
+
+    &__title {
+        text-transform: uppercase;
+        font-family: 'Harabara';
+        font-size: 2.25rem;
+        font-weight: 700;
+        color: $darkBlueColor;
+        letter-spacing: 0.1em;
+        padding-bottom: clamp(.625rem , 5vw, 1.875rem);
+    }
+    &__text {
+        max-width: 56.125rem;
+        line-height: 156%;
+        text-align: center;
+        font-weight: 400;
+        font-size: 1.5rem;
+    }
+    &__text-blue {
+        color: #00A4E8;
+    }
+    &__text-DarkBlue {
+        color: #194484;
+    }
+    &__apps {
+        display: flex;
+        gap: clamp(.625rem , 10vw, 5rem);
+    }
+    &__subtext {
+        max-width: 56.125rem;
+        line-height: 156%;
+        font-weight: 400;
+        font-size: 1.5rem;
+    }
+}
+.technologies-content-apps {
+    display: flex;
+    flex-direction: row;
+    @media (max-width: 53.125rem) {
+        flex-direction: column;
+    }
+    &__item {
+        padding: .75rem;
+        box-shadow: 0px 4px 12px 0px rgba(41, 24, 111, 0.2);
+        border-radius: 1rem;
+    }
+    &__item-1 {
+        background-color: #06B25F;
+    }
+	&__item-2 {
+        background-color: #276ED8;
+    }
+	&__item-3 {
+        background-color: #84B5FF;
+    }
+}
+.technologies-raiting {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5.625rem;
+    padding: 1.875rem;
+    border-radius: .9375rem;
+    box-shadow: 0px 3px 16px 2px rgba(29, 51, 107, 0.15);
+    max-width: 55.8125rem;
+    @media (max-width: 53.125rem) {
+        flex-direction: column;
+    }
+    &__logo {}
+    &__stars {}
+}
+.technologies-raiting-number{
+    color: $mainColor;
+}
+.button-lightGreen {
+}
+
+.technologies-raiting__content {
+    display: flex;
+    gap: .625rem;
+    justify-content: center;
+    align-items: center;
+    &__number {
+        color: $mainColor;
+        font-size: 1.125rem;
+        font-weight: 600;
+    }
+}
+
+@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+/****** Style Star Rating Widget *****/
+
+
+.rating { 
+  border: none;
+  float: left;
+}
+
+.rating > input { display: none; } 
+.rating > label:before { 
+  margin: 5px;
+  font-size: 1.25em;
+  font-family: FontAwesome;
+  display: inline-block;
+  content: "\f005";
+}
+
+.rating > .half:before { 
+  content: "\f089";
+  position: absolute;
+}
+
+.rating > label { 
+  color: #ddd; 
+ float: right; 
+}
+
+/***** CSS Magic to Highlight Stars on Hover *****/
+
+.rating > input:checked ~ label, /* show gold star when clicked */
+.rating:not(:checked) > label:hover, /* hover current star */
+.rating:not(:checked) > label:hover ~ label { color: rgb(6, 178, 95);  } /* hover previous stars in list */
+
+.rating > input:checked + label:hover, /* hover current star when changing rating */
+.rating > input:checked ~ label:hover,
+.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
+.rating > input:checked ~ label:hover ~ label { color: rgb(100, 200, 152);  } 
+
+//----------------------------------------------services-----------------------------------------------------------
+.services {
+    margin-top: 7.5rem;
+    &__container {
+    }
+    &__title {
+        font-family: 'Harabara';
+        font-weight: 700;
+        color: $darkBlueColor;
+        font-size: 2.25rem;
+        letter-spacing: 0.1rem;
+        text-transform: uppercase;
+        text-align: center;
+    }
+    &__content {
+        align-items: center;
+        justify-content: center
+    }
+}
+.services-content {
+        display: grid;
+        gap: .9375rem;
+        padding: 0rem .625rem;
+    &__block-row1 {
+        display: grid;
+        gap: .9375rem;
+    }
+    &__block {
+        @media (max-width: 68.75rem) {
+            display: flex;
+            flex-direction: column;
+        }
+    }
+    &__block-row2 {
+        display: grid;
+        gap: .9375rem;
+    }
+}
+.services-content-block {
+    display: flex;
+    gap: 1.5rem;
+    justify-content: center;
+    align-items: center;
+    &__info {
+        max-width: 34.375rem;
+    }
+    &__image img{
+        width: 100%;
+        min-width: 18.75rem;
+    }
+}
+.services-content-block-info {
+    display: grid;
+    gap: .625rem;
+    &__title {
+        color: $mediumBlueColor;
+        font-size: 1.5rem;
+        font-weight: 700;
+        letter-spacing: 0.05em;
+        text-transform: uppercase;
+        text-align: center;
+    }
+    &__text {
+        color: $mainColor;
+        font-weight: 400;
+        line-height: 162%;
+    }
+}
+
+.services-content-block-reverse {
+    @media (max-width: 68.75rem) {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+}
+
+//----------------------------------------------services-----------------------------------------------------------
