--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -278,6 +278,7 @@
 //----------------------------------------------services-----------------------------------------------------------
 .services {
     margin-top: 7.5rem;
+    margin-bottom: 7.5rem;
     &__container {
     }
     &__title {
@@ -351,4 +352,50 @@
     }
 }
 
-//----------------------------------------------services-----------------------------------------------------------
+//----------------------------------------------looking-----------------------------------------------------------
+
+.looking {
+    position: relative;
+    &::before{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        content: '';
+        background: url('/src/assets/img/home/looking/bg-blue.png');
+        background-size: cover;
+        z-index: -5;
+    }
+    &::after{
+        position: absolute;
+        top: -2.5rem;
+        left: 0;
+        width: 100%;
+        height: 110%;
+        content: '';
+        background: url('/src/assets/img/home/looking/bg-white.png');
+        background-size: cover;
+        z-index: -5;
+    }
+    &__container {
+    display: flex;
+    flex-direction: column;
+    gap: 1.875rem;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 10.3125rem .625rem;
+    position: relative;
+    
+    }
+    &__title {
+        font-family: 'Harabara';
+        font-weight: 700;
+        font-size: clamp(1.75rem, 5vw, 2.75rem);
+        letter-spacing: 0.06em;
+    }
+    &__text {
+        font-size: 1.5rem;
+    }
+}
