--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -3,7 +3,7 @@
     display: flex;
     min-height: 5rem;
     padding: .3125rem;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     box-shadow: 0px 4px 12px 0px rgba(24, 9, 96, 0.1);
     z-index: 50;
