--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,9 +1,8 @@
 //----------------------------------------------focus-----------------------------------------------------------
 
 .focus{
-    padding-top: clamp(3.125rem, 10vh, 9.375rem);
     display: flex;
-    padding: 0rem 1.5625rem;
+    margin-top: 1.5625rem;
     @media (max-width: 68.75em) {
         justify-content: center;
         align-items: center;
@@ -37,9 +36,12 @@
         display: flex;
         flex-direction: column;
         gap: .9375rem;
-        @media (max-width: 68.75em) {
+        @media (max-width: 68.75rem) {
             flex-direction: column-reverse;
-            padding-top: 6.25rem;
+            padding-top: 2.5rem;
+        }
+        @media (max-width: $tablet) {
+            padding-top: 1.5625rem;
         }
     }
     &__text {
@@ -123,7 +125,7 @@
 
 //----------------------------------------------technologies-----------------------------------------------------------
 .technologies {
-    margin-top: 34.375rem;
+    padding-top: 9.375rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
